welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: value faireMotif is not a member of Unit
possible cause: maybe a semicolon is missing before `value faireMotif'?
	}faireMotif()
         ^